deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: edc-dev-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        environment: edc-dev-management
    spec:
      containers:
      - image: ghcr.io/possible-x/management:latest-develop
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: edc-dev-management-github-registry-auth
