deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: edc-dev-management
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
