deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: edc-dev-management
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - management.edc.dev.possible-x.de
      secretName: dev-edc-management-frontend-tls
  rules:
    - host: management.edc.dev.possible-x.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
